Fixed scroll navbar z-index

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -38,7 +38,7 @@
     top: 0;
     width: 100%;
     background: linear-gradient(#ff8f70, #ff3d54);
-    z-index: 20;
+    z-index: 100;
     display: flex;
     align-items: center;
     justify-content: space-between;
