--- a/scss/main.scss
+++ b/scss/main.scss
@@ -89,7 +89,7 @@ ul {
   height: 100vh;
   padding: 2rem;
   background-color: rgba(0, 0, 0, 0.2);
-  z-index: 120;
+  z-index: 150;
   opacity: 0;
   transform: translateX(100%);
   transition: transform 0.6s ease-in-out, opacity 0.6s ease-in-out;
